# GaNController

./: .gitignore  config.toml  pyproject.toml  requirements.txt  test.py
back_250513/libs/: ibeam.py  pfr_100l50.py
back_250526/libs/: ibeam.py  pwux.py
back_251025/: heat_cleaning.py
back_251025/libs/: pfr_100l50.py
backups/back_250513/: heat_cleaning.py  nea_activation.py
backups/back_250513/libs/: gm10.py  pwux.py
backups/back_250526/: heat_cleaning.py  nea_activation.py  test.py
backups/back_250526/libs/: gm10.py  pfr_100l50.py
backups/back_250526/utils/: calc.py  log_file.py  sequence.py
backups/back_251025/: nea_activation.py
backups/back_251025/libs/: ibeam.py
backups/back_251025/utils/: calc.py  log_file.py  sequence.py
backups/back_251118/: heat_cleaning.py
backups/back_251118/utils/: log_file.py
configs/: app_config.toml  nea_config.toml
scripts/: NEA_graph_data.toml  graph.py  graph_NEA.py
scripts/data_plot/: __init__.py  base_plotter.py  plot_HC.py  plot_HD.py  plot_NEGHD.py  plot_nea.py  plot_util.py
src/gan_controller/: main.py
src/gan_controller/application/: app_feature.py  main_window.py
src/gan_controller/common/: constants.py
src/gan_controller/core/: constants.py
src/gan_controller/domain/: __init__.py
src/gan_controller/dto/: nea_activation.py
src/gan_controller/gui/: main_window.py
src/gan_controller/presentation/: app_feature.py  main_window.py
src/gan_controller/runners/: base.py
src/gan_controller/ui/: app_feature.py  main_window.py
src/gan_controller/workers/: experiment_worker.py
src/heater_amd_controller/: app.py  config.py  const.py  heat_cleaning.py  main.py  nea_activation.py
src/heater_amd_controller/controllers/: heat_cleaning_controller.py  main_controller.py  nea_activation_controller.py
(+315 files in other folders)
